<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- TODO: Add necessary string values -->
    <string name="error_internet_connection">Internet is not connected. Please check your internet connection!</string>

    <string name="launch_button_text1">Find my representatives</string>
    <string name="launch_button_text2">Upcoming elections</string>
    <string name="image_elections_description">image elections</string>

    <string name="representative_failed_parse_location">Failed retrieve location details</string>
    <string name="error_missing_first_line_address">Enter first line address</string>
    <string name="error_missing_city">Enter city</string>
    <string name="error_missing_state">State field is required</string>
    <string name="error_missing_zip">Enter zip code</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1_hint">Address Line 1</string>
    <string name="address_line_2_hint">Address Line 2</string>
    <string name="city_hint">City</string>
    <string name="zip">Zip</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="use_my_location">Use my location</string>
    <string name="my_representatives_header">My Representatives</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="error_failed_load_voter_info">Failed to load details using your location information</string>
    <string name="representative_avatar_photo">representative avatar photo</string>
    <string name="www_icon">www icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="twitter_icon">twitter icon</string>
    <string name="upcoming_elections_header">Upcoming elections</string>
    <string name="saved_elections_header">Saved elections</string>
    <string name="election_information_header">Election Information</string>
    <string name="voting_locations_header">Voting Locations</string>
    <string name="ballot_information_header">Ballot Information</string>
    <string name="follow_election_text_button">FOLLOW ELECTION</string>
    <string name="unfollow_election_text_button">UNFOLLOW ELECTION</string>
    <string name="error_failed_get_address_from_location">Can\'t get address for you location</string>

    <string name="voting_location">&lt;a href="%s">Voting locations&lt;/a></string>
    <string name="ballot_information">&lt;a href="%s">Ballot information&lt;/a></string>
    <string name="no_representative_at_your_location">No representative at your location</string>
</resources>
