<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- TODO: Add image for home screen logo. -->
        <ImageView
            android:id="@+id/img_launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_upcoming_elections"
            app:srcCompat="@drawable/ballot_logo"
            android:contentDescription="@string/image_elections_description" />

        <!-- TODO: Add Button to navigate to upcoming elections. -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_upcoming_elections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_find_my_representatives"
            android:text="@string/launch_button_text2" />


        <!-- TODO: Add Button to navigate to representatives. -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_find_my_representatives"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/launch_button_text1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>